@@ -3,6 +3,8 @@ v0.1.4
 - The media links are now more intelligently replaced
 - Show_spoil now works correctly with HTML child elements
 - Fix issue with media link just before a spoil
+- Add the auto-escort feature
+- Add the escort auto good options feature
 - Fix a bug making the extension considered you were not outside when at town
 gates
 
